--- a/MaterialSlimesPlus+.csproj
+++ b/MaterialSlimesPlus+.csproj
@@ -39,10 +39,7 @@
     <Reference Include="Assembly-CSharp_old">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Slime Rancher\SlimeRancher_Data\Managed\Assembly-CSharp_old.dll</HintPath>
     </Reference>
-    <Reference Include="LargoLibrary">
-      <HintPath>..\..\..\..\Downloads\Largo Library 1.6.7-105-1-6-7-1647997990\LargoLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="SRML, Version=0.1.8.2, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="SRML, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Slime Rancher\SlimeRancher_Data\Managed\SRML.dll</HintPath>
     </Reference>
@@ -105,6 +102,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="assets\liquid\liquid_oilcombiner.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Plans.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
